src/App.css
#root {
  width: 100%;
  max-width: 1280px;
  margin: 0 auto;
  padding: 0;
  text-align: center;
  overflow-x: hidden;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

.animate-gradient-x {
  background-size: 100% auto; /* 🟢 חשוב: הופך את ה-Gradient לגדול יותר כדי שיוכל לזוז */
  animation: gradient-x 8s linear infinite; /* 🟢 8s = מהירות התזוזה (איטי = 8 שניות) */
}
@keyframes gradient-move {
  0% { background-position: 0% center; }
  100% { background-position: 200% center; }
}

@keyframes blink {
  0%, 100% { opacity: 1; }
  50% { opacity: 0; }
}

.cursor {
  display: inline-block;
  width: 10px;
  height: 1.2em;
  background-color: #0ea5e9; /* צבע הציאן של הברווזון */
  margin-left: 4px;
  vertical-align: middle;
  animation: blink 1s infinite;
}

html.dark {
  background-color: #06060a !important;
}

.dark body {
  background-color: #06060a !important;
  color: white;
}

